--- a/test/fixtures/tag_instances.yml
+++ b/test/fixtures/tag_instances.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  timestamp: 
+  timestamp: 1
 
 two:
-  timestamp: 
+  timestamp: 1
